--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "echo-editor",
-  "version": "0.5.0",
+  "name": "@lxw/echo-editor",
+  "version": "0.6.0",
   "private": false,
   "license": "MIT",
-  "description": "A modern AI-powered WYSIWYG rich-text editor for Vue, based on Tiptap and shadcn-vue",
-  "author": "SEED<hello.mr.lji@gmail.com>",
-  "homepage": "https://github.com/Seedsa/echo-editor/",
+  "description": "A modern AI-powered WYSIWYG rich-text editor for Vue, based on Tiptap and shadcn-vue (Customized version)",
+  "author": "Your Name <your-email@example.com>",
+  "homepage": "https://github.com/your-username/echo-editor/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Seedsa/echo-editor/"
+    "url": "https://github.com/your-username/echo-editor/"
   },
   "scripts": {
     "dev": "vite",
