--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@leeat/echo-editor",
-  "version": "0.6.9",
+  "name": "@bryce-loskie/echo-editor",
+  "version": "0.1.0",
   "private": false,
   "license": "MIT",
-  "description": "A modern AI-powered WYSIWYG and Highly Customized RichTextEditor for Vue, based on Tiptap and shadcn-vue",
-  "author": "1036232425@qq.com",
-  "homepage": "https://github.com/LeeAt67",
+  "description": "Forked from LeeAt67/echo-editor, a modern AI-powered WYSIWYG and Highly Customized RichTextEditor for Vue, based on Tiptap and shadcn-vue",
+  "author": "1907004005@qq.com",
+  "homepage": "https://github.com/guygubaby",
   "repository": {
     "type": "git",
-    "url": "https://github.com/LeeAt67/echo-editor"
-  },
+    "url": "https://github.com/guygubaby/echo-editor"
+    },
   "scripts": {
     "dev": "vite",
     "examples": "pnpm build:lib && pnpm --dir ./examples run dev",
@@ -33,6 +33,7 @@
   },
   "keywords": [
     "echo editor",
+    "forked from LeeAt67/echo-editor",
     "WYSIWYG",
     "vue",
     "vue.js",
