--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/guygubaby/echo-editor"
-    },
+  },
   "scripts": {
     "dev": "vite",
     "examples": "pnpm build:lib && pnpm --dir ./examples run dev",
@@ -134,6 +134,7 @@
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.19",
+    "code-inspector-plugin": "^1.3.1",
     "commitizen": "^4.3.0",
     "commitlint": "^19.3.0",
     "eslint": "^8.12.0",
